# simple-tasks-management-system

./: .coveragerc  .gitignore  .gitpod.Dockerfile  .gitpod.post_create.sh  .gitpod.yml  .pre-commit-config.yaml  Dockerfile  README.md  app.py  commands.py  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  task_management_system_nginx.conf  uwsgi.ini
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post_create.sh
configs/: config.py  db_config.example.py
migrations/: 1.20210428.create_table_and_index.sql  gitpod_init.sql  init.sql
tasks/: __init__.py  views.py
tests/: test_create_task.py  test_delete_task.py  test_listing_task.py  test_retrieve_task.py  test_update_task.py
utils/: db.py  enums.py
