[tool.poetry]
name = "task-management-system"
version = "v0.0.0"
description = "a task management system build with docker, mysql, python"
authors = ["MikeYang <perryvm06vm06@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7"
Flask = "~1.1"
PyMySQL = {extras = ["rsa"], version = "^1.0.2"}
uWSGI = "^2.0.19"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.0"
commitizen = "^2.17.0"
pre-commit = "^2.11.1"
pytest = "^6.2.3"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "v0.0.0"
tag_format = "v$major.$minor.$patch"
version_files = [
  "pyproject.toml:version"
]
